--- a/moinda-api/src/main/resources/application.yml
+++ b/moinda-api/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
       - oauth
 #  특정 profile을 사용했을 떄 여러 개의 profile을 참조할 수 있음.
     group:
-      local: logging-console, logging-local-config
+      local: logging-console
       dev: logging-file-config
 #  config:
 #    import:
