[#115] feat: Actuator, Prometheus Basic Config

--- a/moinda-api/src/main/resources/application.yml
+++ b/moinda-api/src/main/resources/application.yml
@@ -22,3 +22,10 @@ server:
     session:
       timeout: 30m
       tracking-modes: cookie
+
+# https://hudi.blog/spring-boot-actuator-prometheus-grafana-set-up/
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
