[#116] refactor: logback Config

--- a/moinda-api/src/main/resources/application.yml
+++ b/moinda-api/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
       - core
       - oauth
 #  특정 profile을 사용했을 떄 여러 개의 profile을 참조할 수 있음.
-    group:
-      local: logging-console
-      dev: logging-file-config
+#    group:
+#      local: logging-console
+#      dev: logging-file-config
 #  config:
 #    import:
 #      - application-core.yml
