[#118] feat: Prometheus, Grafana

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -23,13 +23,13 @@ services:
     container_name: local-app
     environment:
       - SPRING_PROFILES_ACTIVE=local,core,oauth
-#      - jasypt.encryptor.password= TODO 사용할떄 변경할것
+#      - jasypt.encryptor.password=
       - TZ=Asia/Seoul
     build:
       context: ..
       dockerfile: ./Dockerfile
     ports:
-      - "9090:9090"
+      - "8080:8080"
     restart: always
     depends_on:
       - local-db
@@ -42,7 +42,7 @@ services:
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
     ports:
-      - 9091:9091
+      - 9090:9090
     restart: unless-stopped
     volumes:
       - ../prometheus:/etc/prometheus
@@ -56,7 +56,7 @@ services:
     image: grafana/grafana
     container_name: grafana
     ports:
-      - 3000:3000
+      - 3030:3030
     restart: unless-stopped
     environment:
       - GF_SECURITY_ADMIN_USER=admin
